# mipt-nlp-ft

./: .gitignore  pyproject.toml  requirements.txt
notebooks/: hw02.ipynb
